--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ sysinfo.txt
 # Unity3D generated meta files
 *.pidb.meta
 
+/[Ll]ogs/
+/[Uu]ser[Ss]ettings/
+
 ###
 # VS/MD solution and project files
 ###
@@ -27,6 +30,8 @@ sysinfo.txt
 *.userprefs
 *.pidb
 .DS_Store
+
+
 
 ###
 # OS generated
